# polymarket-nba-tg-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
src/: config.py  logger.py
src/bot/: bot.py  domain.py
src/bot/commands/: keyboards.py  text.py
src/bot/commands/events/: __init__.py  handlers.py  keyboards.py  states.py  text.py
src/bot/commands/reports/: __init__.py  handlers.py  keyboards.py  states.py
src/bot/commands/start/: __init__.py
src/bot/commands/update/: __init__.py
src/queue/: __init__.py  connection.py  consumer.py  producer.py
src/tasks/: __init__.py  registry.py  schemas.py  workers.py
