[project]
name = "polymarket-nba-tgbot"
version = "0.1.0"
description = ""
authors = [
    { name = "etchedheadplate", email = "94640304+etchedheadplate@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.6.1",
    "aiofiles==25.1.0",
    "aiogram==3.25.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiormq==6.9.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "certifi==2026.2.25",
    "cfgv==3.5.0",
    "click==8.3.1",
    "coverage==7.13.4",
    "distlib==0.4.0",
    "filelock==3.24.3",
    "frozenlist==1.8.0",
    "identify==2.6.16",
    "idna==3.11",
    "iniconfig==2.3.0",
    "magic-filter==1.0.12",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "nodeenv==1.10.0",
    "packaging==26.0",
    "pamqp==3.3.0",
    "pathspec==1.0.4",
    "pika==1.3.2",
    "platformdirs==4.9.2",
    "pluggy==1.6.0",
    "pre-commit==4.5.1",
    "propcache==0.4.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pygments==2.19.2",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "python-discovery==1.1.0",
    "python-dotenv==1.2.1",
    "pytokens==0.4.1",
    "pyyaml==6.0.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "virtualenv==21.1.0",
    "yarl==1.22.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.7,<0.16.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
]

[tool.setuptools]
packages = []

[tool.black]
line-length = 120
target-version = [
    "py312",
]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.pyright]
include = [
    ".",
]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]
pythonVersion = "3.12"
typeCheckingMode = "strict"
